--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>pe.softweb</groupId>
-  <artifactId>static</artifactId>
+  <artifactId>access</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>static Maven Webapp</name>
+  <name>Access SWP Maven WebAPI</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -33,7 +33,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>static</finalName>
+    <finalName>access</finalName>
     <plugins>
       <!-- Usar JDK8, soporta lamdas-->
       <plugin>
