--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,23 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- Base de Datos -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.javalite</groupId>
+      <artifactId>activejdbc</artifactId>
+      <version>1.4.13</version>
+    </dependency>
+    <!-- JSON -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20170516</version>
+    </dependency>
     <!--Libería para leer el archivos *.conf-->
     <dependency>
       <groupId>com.typesafe</groupId>
