Conexión a la base de datos

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,13 @@
-ambiente_request_logs = "inactivo"
+base_url = "http://localhost:8080/"
+static_url = "http://localhost:4000/"
+ambiente_static = "desarrollo"
+ambiente_csrf = "activo"
+ambiente_session = "activo"
+ambiente_request_logs = "activo"
+
+database {
+  driver = "com.mysql.jdbc.Driver"
+  url = "jdbc:mysql://127.0.0.1:3306/access"
+  user = "root"
+  password = "123"
+}
