--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
       <artifactId>config</artifactId>
       <version>1.3.2</version>
     </dependency>
+    <!-- Random String -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+    </dependency>
     <!-- Spark Framework-->
     <dependency>
       <groupId>com.sparkjava</groupId>
